[tool.poetry]
name = "stock_analyzer"
version = "0.1.0"
description = "Python package that analyzes stocks!"
authors = ["tingyu00 <zoezhang0408@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
